Adding play/pause RPC
